[package]
name = "endutr"
version = "0.6.2"
description = "Slab-backed ID-tree"
keywords = ["tree", "slab", "id", "index"]
authors = [
    "June McEnroe <june@causal.agency>",
    "Mohamed Haisham <mhaisham79@gmail.com>",
]
license = "ISC"
repository = "https://github.com/causal-agent/endutr"
readme = "README.md"
edition = "2021"
resolver = "2"

[dependencies]
itertools = "0.13.0"
slab = "~0.4"
